jobmanager-webui-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flink-jobmanager-webui
spec:
  tls:
    - hosts:
        - flink-jobmanager-webui.site.com
      secretName: site.com
  rules:
    - http:
        paths:
          - backend:
              serviceName: flink-jobmanager
              servicePort: 8081
            path: /
